reduce sub input font size on small devices - fixes #10

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -149,3 +149,9 @@ footer {
         text-align: center;
     }
 }
+
+@include  media-breakpoint-down(sm) {
+    #subEmailInput {
+        font-size: 0.9rem;
+    }
+}
